syntax = "proto3";
option java_multiple_files = true;
package org.rizki.mufrizal.grpc.microservice.domain;

enum HttpMethod {
  GET = 0;
  HEAD = 1;
  POST = 2;
  PUT = 3;
  DELETE = 4;
  CONNECT = 5;
  OPTIONS = 6;
  TRACE = 7;
  PATCH = 8;
}

message EndPointProto {
  string id = 1;
  string backend = 2;
  string backendFunction = 3;
  string url = 4;
  HttpMethod method = 5;
  uint64  timeout = 6;
  uint64  connectTimeout = 7;
}